--- a/app/components/pages/feed.css
+++ b/app/components/pages/feed.css
@@ -55,8 +55,9 @@
 }
 
 .feed-container{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: 0.09fr 1fr 0.09fr;
+
     background: rgba(0, 0, 0, 0.015);
     border-right: 1px solid rgba(0, 0, 0, 0.08);
 
@@ -126,13 +127,12 @@
 
 
 .feed-bottom-view{
-    bottom: 0;
-    position: sticky;
-    position: -webkit-sticky;
+   
     width:100%;
     display: flex;
     flex-direction: column;
     padding: 26px;
+    padding-top: 0px;
     align-content: baseline;
     
     
@@ -255,8 +255,8 @@
 
 
 .message-feed-view{
+    width: 100%;
     overflow-y: scroll;
-     flex:1; 
     -ms-overflow-style: none;  
 }
 .message-feed-view::-webkit-scrollbar{
@@ -268,7 +268,8 @@
     padding: 20px;
     display: flex;
     flex-direction: row;
-    flex:0.07;
+
+    
 }
 
 
@@ -349,10 +350,21 @@
     font-family: 'Inter-regular';
  
 }
+
+.more-replies-messages{
+    width: 100%;
+    height: 100px;
+    border: none;
+    border-left: 1px solid rgba(0, 0, 0, 0.3);
+    padding: 8px;
+    box-shadow: none;
+    outline: none;
+    border-radius: 0px;
+}
 .message-replies{
     width: 100%;
     margin-top: 7px;
-    height: 55px;
+    height: auto;
     padding: 8px;
     font-weight: 500;
     cursor: pointer;
