--- a/app/components/pages/progress.css
+++ b/app/components/pages/progress.css
@@ -22,8 +22,8 @@
 .progress-bar-container{
     width: 100%;
     height: 30px;
-    border: 0.5px solid rgba(12, 140, 233,0.6);
-    background:rgba(142, 142, 255,0.36);
+    border: 0.5px solid rgba(12, 140, 233,0.3);
+    background:rgba(142, 142, 255,0.15);
     border-radius: 7px;
 }
 
@@ -39,7 +39,7 @@
 .progress-tint{
     width: calc(100%/2);
     height: 100%;
-    background: rgba(12, 140, 233,0.2);
+    background: rgba(12, 140, 233,0.1);
     border-radius: 7px;
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
